...
    <SafeAreaView style={styles.safeArea}>
      <KeyboardAvoidingView
        style={styles.flex}
        behavior={Platform.OS === 'ios' ? 'padding' : undefined}
        keyboardVerticalOffset={10}>
        <ThemedView style={styles.header}>
          <ThemedText type="subtitle">Global Chat</ThemedText>
          <View style={styles.preferenceRow}>
            <ThemedText type="small">Pin notifications</ThemedText>
            <Switch value={notificationsEnabled} onValueChange={onToggleNotifications} />
          </View>
        </ThemedView>

...
